--- a/config.toml
+++ b/config.toml
@@ -12,3 +12,4 @@ theme = "nix"
   GithubID = "kenichi-shibata"
   LinkedInID = "kenichishibata31"
   Email = "kenichi@shibata.co.uk"
+  CvURL = "https://github.com/kenichi-shibata/kenichi-shibata/raw/master/Kenichi_Shibata_VisualCV_Resume.pdf"
