added CV in web

--- a/config.toml
+++ b/config.toml
@@ -13,3 +13,9 @@ theme = "nix"
   LinkedInID = "kenichishibata31"
   Email = "kenichi@shibata.co.uk"
   CvURL = "https://github.com/kenichi-shibata/kenichi-shibata/raw/master/Kenichi_Shibata_VisualCV_Resume.pdf"
+
+[menu]
+  [[menu.header]]
+    name = "cv"
+    weight = 0
+    url = "/cv"
