Fixup CV; updated about

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "nix"
   Name = "Kenichi Shibata"
   HeaderUsername = "kenichi"
   HeaderHostname = "shibata.co.uk"
-  About = "I'm a Cloud Solution Architect working in London. Specializing in Containers and Networking."
+  About = "Kenichi is a Cloud Expert with more than 3 years of Kubernetes in production and more than 8 years of Cloud Engineering Experience. He worked across multiple sectors on a global scale including Retail with Uniqlo and Fast Retailing, Conde Nast (Vogue, GQ, Wired, Reddit). Also worked and designed solutions for highly regulated environments like Finance with Simplex JP, Beacon Platform, ComparetheMarket."
   ProfilePicture = "https://avatars0.githubusercontent.com/u/13744098?s=460&u=21c703da9a2c23b2f6c15f81f82ae1f818ed26dc&v=4"
   GithubID = "kenichi-shibata"
   LinkedInID = "kenichishibata31"
