updated about me

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "nix"
   Name = "Kenichi Shibata"
   HeaderUsername = "kenichi"
   HeaderHostname = "shibata.co.uk"
-  About = "Kenichi is a Cloud Expert with more than 3 years of Kubernetes in production and more than 8 years of Cloud Engineering Experience. He worked across multiple sectors on a global scale including Retail with Uniqlo and Fast Retailing, Conde Nast (Vogue, GQ, Wired, Reddit). Also worked and designed solutions for highly regulated environments like Finance with Simplex JP, Beacon Platform, ComparetheMarket."
+  About = "An innovative DevSecOps leader with over a decade of experience architecting and optimizing cloud infrastructure and security solutions. I excel at driving integration of cutting-edge practices into software development lifecycles to enhance security, reduce costs, and boost efficiency. My expertise has been recognized through speaking engagements at major events like AWS Summit, QCon, and Cloud Expo Europe. As the author of \"Cloud Native Monitoring\" and \"Cloud Native Observability\" (O'Reilly Media), and a regular contributor to technical publications, I'm passionate about sharing knowledge. I'm seeking an opportunity to leverage my extensive cloud security, DevOps, and authorship background to drive success for a forward-thinking organization."
   ProfilePicture = "https://avatars0.githubusercontent.com/u/13744098?s=460&u=21c703da9a2c23b2f6c15f81f82ae1f818ed26dc&v=4"
   GithubID = "kenichi-shibata"
   LinkedInID = "kenichishibata31"
